// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Polkadot Collectives Preimage > Polkadot Collectives Preimage > preimage tests > preimage empty test > note empty preimage events 1`] = `
[
  {
    "data": {
      "hash_": "(hash)",
    },
    "method": "Noted",
    "section": "preimage",
  },
]
`;

exports[`Polkadot Collectives Preimage > Polkadot Collectives Preimage > preimage tests > preimage empty test > unnote empty preimage events 1`] = `
[
  {
    "data": {
      "hash_": "(hash)",
    },
    "method": "Cleared",
    "section": "preimage",
  },
]
`;
